Atualização de estilo

--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@ body {
   }
   
   h2 {
-    color: #83a9c9;
+    color: #e8a4f0;
     background-color: rgba(255,255,255,0.1);
     border-radius: 5px;
     padding: 10px;
